packages/llm_llamacpp/src/llama.h

//
// C interface
//
// TODO: show sample usage
//

// Forward declarations
struct llama_model;
struct llama_context;
struct llama_sampler;
typedef struct llama_model llama_model;
typedef struct llama_context llama_context;
typedef struct llama_sampler llama_sampler;
typedef int32_t llama_pos;
typedef int32_t llama_token;
typedef int32_t llama_seq_id;
// Batch for submitting tokens
struct llama_batch {
    int32_t n_tokens;
    
    llama_token  * token;
    float        * embd;
    llama_pos    * pos;
    int32_t      * n_seq_id;
    llama_seq_id ** seq_id;
    int8_t       * logits;
};
//
// Tokenization
//

// Convert text to tokens
// Returns the number of tokens, negative on error
int32_t llama_tokenize(
    const llama_model * model,
    const char * text,
    int32_t text_len,
    llama_token * tokens,
    int32_t n_tokens_max,
    bool add_special,
    bool parse_special);
// Convert token to text piece
// Returns the number of characters, negative on error
int32_t llama_token_to_piece(
    const llama_model * model,
    llama_token token,
    char * buf,
    int32_t length,
    int32_t lstrip,
    bool special);
// Detokenize - convert tokens back to text
int32_t llama_detokenize(
    const llama_model * model,
    const llama_token * tokens,
    int32_t n_tokens,
    char * text,
    int32_t text_len_max,
    bool remove_special,
    bool unparse_special);
//
// Batch operations
//

// Initialize a batch (deprecated, use llama_batch_get_one or manual allocation)
struct llama_batch llama_batch_init(int32_t n_tokens, int32_t embd, int32_t n_seq_max);
// Free batch memory
void llama_batch_free(struct llama_batch batch);
// Get a batch for a single sequence of tokens
struct llama_batch llama_batch_get_one(
    llama_token * tokens,
    int32_t n_tokens,
    llama_pos pos_0,
    llama_seq_id seq_id);
//
// Decode (inference)
//

// Run the model on the batch
// Returns 0 on success, 1 if could not find KV slot, < 0 on error
int32_t llama_decode(llama_context * ctx, struct llama_batch batch);
//
// Logits access
//

// Get logits for all tokens (requires logits_all = true)
float * llama_get_logits(llama_context * ctx);
// Get logits for the i-th token
float * llama_get_logits_ith(llama_context * ctx, int32_t i);
//
// KV cache management
//

// Clear the KV cache
void llama_kv_cache_clear(llama_context * ctx);
// Remove tokens from KV cache
// seq_id < 0 removes from all sequences
// p0 < 0 removes from start
// p1 < 0 removes to end
bool llama_kv_cache_seq_rm(
    llama_context * ctx,
    llama_seq_id seq_id,
    llama_pos p0,
    llama_pos p1);
// Copy tokens from one sequence to another
void llama_kv_cache_seq_cp(
    llama_context * ctx,
    llama_seq_id seq_id_src,
    llama_seq_id seq_id_dst,
    llama_pos p0,
    llama_pos p1);
// Shift positions in KV cache
void llama_kv_cache_seq_add(
    llama_context * ctx,
    llama_seq_id seq_id,
    llama_pos p0,
    llama_pos p1,
    llama_pos delta);
//
// Sampling
//

// Sampler chain
llama_sampler * llama_sampler_chain_init(void * params);
void llama_sampler_chain_add(llama_sampler * chain, llama_sampler * smpl);
void llama_sampler_free(llama_sampler * smpl);
void llama_sampler_reset(llama_sampler * smpl);
llama_token llama_sampler_sample(llama_sampler * smpl, llama_context * ctx, int32_t idx);
// Create samplers
llama_sampler * llama_sampler_init_greedy(void);
llama_sampler * llama_sampler_init_dist(uint32_t seed);