packages/llm_llamacpp/lib/src/bindings/llama_bindings.dart


  /// Convert text to tokens
  /// Returns the number of tokens, negative on error
  int llama_tokenize(
    ffi.Pointer<llama_model> model,
    ffi.Pointer<ffi.Char> text,
    int text_len,
    ffi.Pointer<llama_token> tokens,
    int n_tokens_max,
    bool add_special,
    bool parse_special,
  ) {
    return _llama_tokenize(
      model,
      text,
      text_len,
      tokens,
      n_tokens_max,
      add_special,
      parse_special,
    );
  }

  late final _llama_tokenizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<llama_model>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<llama_token>,
            ffi.Int32,
            ffi.Bool,
            ffi.Bool,
          )
        >
      >('llama_tokenize');
  late final _llama_tokenize = _llama_tokenizePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_model>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<llama_token>,
          int,
          bool,
          bool,
        )
      >();

  /// Convert token to text piece
  /// Returns the number of characters, negative on error
  int llama_token_to_piece(
    ffi.Pointer<llama_model> model,
    int token,
    ffi.Pointer<ffi.Char> buf,
    int length,
    int lstrip,
    bool special,
  ) {
    return _llama_token_to_piece(model, token, buf, length, lstrip, special);
  }

  late final _llama_token_to_piecePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<llama_model>,
            llama_token,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Bool,
          )
        >
      >('llama_token_to_piece');
  late final _llama_token_to_piece = _llama_token_to_piecePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_model>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          bool,
        )
      >();

  /// Detokenize - convert tokens back to text
  int llama_detokenize(
    ffi.Pointer<llama_model> model,
    ffi.Pointer<llama_token> tokens,
    int n_tokens,
    ffi.Pointer<ffi.Char> text,
    int text_len_max,
    bool remove_special,
    bool unparse_special,
  ) {
    return _llama_detokenize(
      model,
      tokens,
      n_tokens,
      text,
      text_len_max,
      remove_special,
      unparse_special,
    );
  }

  late final _llama_detokenizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<llama_model>,
            ffi.Pointer<llama_token>,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Bool,
            ffi.Bool,
          )
        >
      >('llama_detokenize');
  late final _llama_detokenize = _llama_detokenizePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_model>,
          ffi.Pointer<llama_token>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          bool,
          bool,
        )
      >();

  /// Initialize a batch (deprecated, use llama_batch_get_one or manual allocation)
  llama_batch llama_batch_init(int n_tokens, int embd, int n_seq_max) {
    return _llama_batch_init(n_tokens, embd, n_seq_max);
  }

  late final _llama_batch_initPtr =
      _lookup<
        ffi.NativeFunction<
          llama_batch Function(ffi.Int32, ffi.Int32, ffi.Int32)
        >
      >('llama_batch_init');
  late final _llama_batch_init = _llama_batch_initPtr
      .asFunction<llama_batch Function(int, int, int)>();

  /// Free batch memory
  void llama_batch_free(llama_batch batch) {
    return _llama_batch_free(batch);
  }

  late final _llama_batch_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(llama_batch)>>(
        'llama_batch_free',
      );
  late final _llama_batch_free = _llama_batch_freePtr
      .asFunction<void Function(llama_batch)>();

  /// Get a batch for a single sequence of tokens
  llama_batch llama_batch_get_one(
    ffi.Pointer<llama_token> tokens,
    int n_tokens,
    int pos_0,
    int seq_id,
  ) {
    return _llama_batch_get_one(tokens, n_tokens, pos_0, seq_id);
  }

  late final _llama_batch_get_onePtr =
      _lookup<
        ffi.NativeFunction<
          llama_batch Function(
            ffi.Pointer<llama_token>,
            ffi.Int32,
            llama_pos,
            llama_seq_id,
          )
        >
      >('llama_batch_get_one');
  late final _llama_batch_get_one = _llama_batch_get_onePtr
      .asFunction<
        llama_batch Function(ffi.Pointer<llama_token>, int, int, int)
      >();

  /// Run the model on the batch
  /// Returns 0 on success, 1 if could not find KV slot, < 0 on error
  int llama_decode(ffi.Pointer<llama_context> ctx, llama_batch batch) {
    return _llama_decode(ctx, batch);
  }

  late final _llama_decodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<llama_context>, llama_batch)
        >
      >('llama_decode');
  late final _llama_decode = _llama_decodePtr
      .asFunction<int Function(ffi.Pointer<llama_context>, llama_batch)>();

  /// Get logits for all tokens (requires logits_all = true)
  ffi.Pointer<ffi.Float> llama_get_logits(ffi.Pointer<llama_context> ctx) {
    return _llama_get_logits(ctx);
  }

  late final _llama_get_logitsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<llama_context>)
        >
      >('llama_get_logits');
  late final _llama_get_logits = _llama_get_logitsPtr
      .asFunction<
        ffi.Pointer<ffi.Float> Function(ffi.Pointer<llama_context>)
      >();

  /// Get logits for the i-th token
  ffi.Pointer<ffi.Float> llama_get_logits_ith(
    ffi.Pointer<llama_context> ctx,
    int i,
  ) {
    return _llama_get_logits_ith(ctx, i);
  }

  late final _llama_get_logits_ithPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<llama_context>, ffi.Int32)
        >
      >('llama_get_logits_ith');
  late final _llama_get_logits_ith = _llama_get_logits_ithPtr
      .asFunction<
        ffi.Pointer<ffi.Float> Function(ffi.Pointer<llama_context>, int)
      >();

  /// Clear the KV cache
  void llama_kv_cache_clear(ffi.Pointer<llama_context> ctx) {
    return _llama_kv_cache_clear(ctx);
  }

  late final _llama_kv_cache_clearPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_context>)>
      >('llama_kv_cache_clear');
  late final _llama_kv_cache_clear = _llama_kv_cache_clearPtr
      .asFunction<void Function(ffi.Pointer<llama_context>)>();

  /// Remove tokens from KV cache
  /// seq_id < 0 removes from all sequences
  /// p0 < 0 removes from start
  /// p1 < 0 removes to end
  bool llama_kv_cache_seq_rm(
    ffi.Pointer<llama_context> ctx,
    int seq_id,
    int p0,
    int p1,
  ) {
    return _llama_kv_cache_seq_rm(ctx, seq_id, p0, p1);
  }

  late final _llama_kv_cache_seq_rmPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<llama_context>,
            llama_seq_id,
            llama_pos,
            llama_pos,
          )
        >
      >('llama_kv_cache_seq_rm');
  late final _llama_kv_cache_seq_rm = _llama_kv_cache_seq_rmPtr
      .asFunction<bool Function(ffi.Pointer<llama_context>, int, int, int)>();

  /// Copy tokens from one sequence to another
  void llama_kv_cache_seq_cp(
    ffi.Pointer<llama_context> ctx,
    int seq_id_src,
    int seq_id_dst,
    int p0,
    int p1,
  ) {
    return _llama_kv_cache_seq_cp(ctx, seq_id_src, seq_id_dst, p0, p1);
  }

  late final _llama_kv_cache_seq_cpPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<llama_context>,
            llama_seq_id,
            llama_seq_id,
            llama_pos,
            llama_pos,
          )
        >
      >('llama_kv_cache_seq_cp');
  late final _llama_kv_cache_seq_cp = _llama_kv_cache_seq_cpPtr
      .asFunction<
        void Function(ffi.Pointer<llama_context>, int, int, int, int)
      >();

  /// Shift positions in KV cache
  void llama_kv_cache_seq_add(
    ffi.Pointer<llama_context> ctx,
    int seq_id,
    int p0,
    int p1,
    int delta,
  ) {
    return _llama_kv_cache_seq_add(ctx, seq_id, p0, p1, delta);
  }

  late final _llama_kv_cache_seq_addPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<llama_context>,
            llama_seq_id,
            llama_pos,
            llama_pos,
            llama_pos,
          )
        >
      >('llama_kv_cache_seq_add');
  late final _llama_kv_cache_seq_add = _llama_kv_cache_seq_addPtr
      .asFunction<
        void Function(ffi.Pointer<llama_context>, int, int, int, int)
      >();

  /// Sampler chain
  ffi.Pointer<llama_sampler> llama_sampler_chain_init(
    ffi.Pointer<ffi.Void> params,
  ) {
    return _llama_sampler_chain_init(params);
  }

  late final _llama_sampler_chain_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_sampler> Function(ffi.Pointer<ffi.Void>)
        >
      >('llama_sampler_chain_init');
  late final _llama_sampler_chain_init = _llama_sampler_chain_initPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(ffi.Pointer<ffi.Void>)>();

  void llama_sampler_chain_add(
    ffi.Pointer<llama_sampler> chain,
    ffi.Pointer<llama_sampler> smpl,
  ) {
    return _llama_sampler_chain_add(chain, smpl);
  }

  late final _llama_sampler_chain_addPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<llama_sampler>,
            ffi.Pointer<llama_sampler>,
          )
        >
      >('llama_sampler_chain_add');
  late final _llama_sampler_chain_add = _llama_sampler_chain_addPtr
      .asFunction<
        void Function(ffi.Pointer<llama_sampler>, ffi.Pointer<llama_sampler>)
      >();

  void llama_sampler_free(ffi.Pointer<llama_sampler> smpl) {
    return _llama_sampler_free(smpl);
  }

  late final _llama_sampler_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_sampler>)>
      >('llama_sampler_free');
  late final _llama_sampler_free = _llama_sampler_freePtr
      .asFunction<void Function(ffi.Pointer<llama_sampler>)>();

  void llama_sampler_reset(ffi.Pointer<llama_sampler> smpl) {
    return _llama_sampler_reset(smpl);
  }

  late final _llama_sampler_resetPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_sampler>)>
      >('llama_sampler_reset');
  late final _llama_sampler_reset = _llama_sampler_resetPtr
      .asFunction<void Function(ffi.Pointer<llama_sampler>)>();

  int llama_sampler_sample(
    ffi.Pointer<llama_sampler> smpl,
    ffi.Pointer<llama_context> ctx,
    int idx,
  ) {
    return _llama_sampler_sample(smpl, ctx, idx);
  }

  late final _llama_sampler_samplePtr =
      _lookup<
        ffi.NativeFunction<
          llama_token Function(
            ffi.Pointer<llama_sampler>,
            ffi.Pointer<llama_context>,
            ffi.Int32,
          )
        >
      >('llama_sampler_sample');
  late final _llama_sampler_sample = _llama_sampler_samplePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_sampler>,
          ffi.Pointer<llama_context>,
          int,
        )
      >();

  /// Create samplers
  ffi.Pointer<llama_sampler> llama_sampler_init_greedy() {
    return _llama_sampler_init_greedy();
  }

  late final _llama_sampler_init_greedyPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<llama_sampler> Function()>>(
        'llama_sampler_init_greedy',
      );
  late final _llama_sampler_init_greedy = _llama_sampler_init_greedyPtr
      .asFunction<ffi.Pointer<llama_sampler> Function()>();

  ffi.Pointer<llama_sampler> llama_sampler_init_dist(int seed) {
    return _llama_sampler_init_dist(seed);
  }
